--- a/src/css/extra/_markdown.scss
+++ b/src/css/extra/_markdown.scss
@@ -1,6 +1,10 @@
 /*! Formatting for Markdown-generated HTML */
 
 .markdown-content {
+  * {
+    overflow-wrap: break-word;
+  }
+
 	h1,
 	h2,
 	h3,
